tests/idris2/basic041/expected
1/1: Building QDo (QDo.idr)
Error: While processing right hand side of test. Undefined name B.A.>>. 

QDo.idr:27:10--27:11
 23 |     a >> f = a >>= const f
 24 | 
 25 | test : Nat
 26 | test = B.A.do
 27 |          5
               ^
Did you mean any of: Main.A.B.>>, Prelude.Interfaces.>>, Main.MyDo.>>, >, >=>, or >>=?
